@@ -25,7 +25,6 @@ import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Set;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 import org.apache.maven.RepositoryUtils;
 import org.apache.maven.api.Service;
@@ -203,7 +202,7 @@ public class BootstrapCoreExtensionManager {
         }
         return CoreExtensionEntry.discoverFrom(
                 realm,
-                Collections.singleton(artifacts.get(0).getPath().toFile()),
+                Set.of(artifacts.get(0).getPath().toFile()),
                 extension.getGroupId() + ":" + extension.getArtifactId(),
                 extension.getConfiguration());
     }
@@ -231,7 +230,7 @@ public class BootstrapCoreExtensionManager {
             return result.getArtifactResults().stream()
                     .filter(ArtifactResult::isResolved)
                     .map(ArtifactResult::getArtifact)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (PluginResolutionException | InterpolatorException e) {
             throw new ExtensionResolutionException(extension, e);
         }
