@@ -49,7 +49,7 @@ public class ExceptionSummary {
         this.exception = exception;
         this.message = (message != null) ? message : "";
         this.reference = (reference != null) ? reference : "";
-        this.children = (children != null) ? Collections.unmodifiableList(children) : Collections.emptyList();
+        this.children = (children != null) ? Collections.unmodifiableList(children) : List.of();
     }
 
     public Throwable getException() {
