@@ -19,51 +19,47 @@
 package org.apache.maven.internal.impl;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Stream;
+import java.util.Objects;
 
 import org.apache.maven.api.Lifecycle;
+import org.apache.maven.api.annotations.Nonnull;
 import org.apache.maven.api.model.Plugin;
 import org.apache.maven.api.model.PluginExecution;
-
-import static java.util.Arrays.asList;
 
 public class Lifecycles {
 
     static Lifecycle.Phase phase(String name) {
-        return new DefaultPhase(name, Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
+        return new DefaultPhase(name, List.of(), List.of(), List.of());
     }
 
     static Lifecycle.Phase phase(String name, Lifecycle.Phase... phases) {
-        return new DefaultPhase(name, Collections.emptyList(), Collections.emptyList(), asList(phases));
+        return new DefaultPhase(name, List.of(), List.of(), List.of(phases));
     }
 
     static Lifecycle.Phase phase(String name, Lifecycle.Link link, Lifecycle.Phase... phases) {
-        return new DefaultPhase(name, Collections.emptyList(), Collections.singletonList(link), asList(phases));
+        return new DefaultPhase(name, List.of(), List.of(link), List.of(phases));
     }
 
     static Lifecycle.Phase phase(String name, Plugin plugin) {
-        return new DefaultPhase(
-                name, Collections.singletonList(plugin), Collections.emptyList(), Collections.emptyList());
+        return new DefaultPhase(name, List.of(plugin), List.of(), List.of());
     }
 
     static Lifecycle.Phase phase(String name, Lifecycle.Link link, Plugin plugin) {
-        return new DefaultPhase(
-                name, Collections.singletonList(plugin), Collections.singletonList(link), Collections.emptyList());
+        return new DefaultPhase(name, List.of(plugin), List.of(link), List.of());
     }
 
     static Lifecycle.Phase phase(String name, Lifecycle.Link link1, Lifecycle.Link link2, Lifecycle.Phase... phases) {
-        return new DefaultPhase(name, Collections.emptyList(), asList(link1, link2), asList(phases));
+        return new DefaultPhase(name, List.of(), List.of(link1, link2), List.of(phases));
     }
 
     static Lifecycle.Phase phase(
             String name, Lifecycle.Link link1, Lifecycle.Link link2, Lifecycle.Link link3, Lifecycle.Phase... phases) {
-        return new DefaultPhase(name, Collections.emptyList(), asList(link1, link2, link3), asList(phases));
+        return new DefaultPhase(name, List.of(), List.of(link1, link2, link3), List.of(phases));
     }
 
     static Lifecycle.Phase phase(String name, Collection<Lifecycle.Link> links, Lifecycle.Phase... phases) {
-        return new DefaultPhase(name, Collections.emptyList(), links, asList(phases));
+        return new DefaultPhase(name, List.of(), links, List.of(phases));
     }
 
     static Plugin plugin(String coords, String phase) {
@@ -72,10 +68,10 @@ public class Lifecycles {
                 .groupId(c[0])
                 .artifactId(c[1])
                 .version(c[2])
-                .executions(Collections.singletonList(PluginExecution.newBuilder()
+                .executions(List.of(PluginExecution.newBuilder()
                         .id("default-" + c[3])
                         .phase(phase)
-                        .goals(Collections.singletonList(c[3]))
+                        .goals(List.of(c[3]))
                         .location("", DefaultLifecycleRegistry.DEFAULT_LIFECYCLE_INPUT_LOCATION)
                         .location("id", DefaultLifecycleRegistry.DEFAULT_LIFECYCLE_INPUT_LOCATION)
                         .location("phase", DefaultLifecycleRegistry.DEFAULT_LIFECYCLE_INPUT_LOCATION)
@@ -90,159 +86,148 @@ public class Lifecycles {
 
     /** Indicates the phase is after the phases given in arguments */
     static Lifecycle.Link after(String phase) {
-        return new Lifecycle.Link() {
-            @Override
-            public Kind kind() {
-                return Kind.AFTER;
-            }
-
-            @Override
-            public Lifecycle.Pointer pointer() {
-                return new Lifecycle.PhasePointer() {
-                    @Override
-                    public String phase() {
-                        return phase;
-                    }
-
-                    @Override
-                    public String toString() {
-                        return "phase(" + phase + ")";
-                    }
-                };
-            }
-
-            @Override
-            public String toString() {
-                return "after(" + pointer() + ")";
-            }
-        };
+        return new DefaultLink(Lifecycle.Link.Kind.AFTER, new DefaultPhasePointer(phase));
     }
 
     /** Indicates the phase is after the phases for the dependencies in the given scope */
     static Lifecycle.Link dependencies(String scope, String phase) {
-        return new Lifecycle.Link() {
-            @Override
-            public Kind kind() {
-                return Kind.AFTER;
-            }
-
-            @Override
-            public Lifecycle.Pointer pointer() {
-                return new Lifecycle.DependenciesPointer() {
-                    @Override
-                    public String phase() {
-                        return phase;
-                    }
-
-                    @Override
-                    public String scope() {
-                        return scope;
-                    }
-
-                    @Override
-                    public String toString() {
-                        return "dependencies(" + scope + ", " + phase + ")";
-                    }
-                };
-            }
-
-            @Override
-            public String toString() {
-                return "after(" + pointer() + ")";
-            }
-        };
+        return new DefaultLink(Lifecycle.Link.Kind.AFTER, new DefaultDependenciesPointer(phase, scope));
     }
 
     static Lifecycle.Link children(String phase) {
-        return new Lifecycle.Link() {
-            @Override
-            public Kind kind() {
-                return Kind.AFTER;
-            }
-
-            @Override
-            public Lifecycle.Pointer pointer() {
-                return new Lifecycle.ChildrenPointer() {
-                    @Override
-                    public String phase() {
-                        return phase;
-                    }
-
-                    @Override
-                    public String toString() {
-                        return "children(" + phase + ")";
-                    }
-                };
-            }
-
-            @Override
-            public String toString() {
-                return "after(" + pointer() + ")";
-            }
-        };
+        return new DefaultLink(Lifecycle.Link.Kind.AFTER, new DefaultChildrenPointer(phase));
     }
 
     static Lifecycle.Alias alias(String v3Phase, String v4Phase) {
         return new DefaultAlias(v3Phase, v4Phase);
     }
 
-    static class DefaultPhase implements Lifecycle.Phase {
-        private final String name;
-        private final List<Plugin> plugins;
-        private final Collection<Lifecycle.Link> links;
-        private final List<Lifecycle.Phase> phases;
-
-        DefaultPhase(
-                String name, List<Plugin> plugins, Collection<Lifecycle.Link> links, List<Lifecycle.Phase> phases) {
-            this.name = name;
-            this.plugins = plugins;
-            this.links = links;
-            this.phases = phases;
+    /**
+     * Record implementation of Link.
+     *
+     * @param kind The kind of link (BEFORE or AFTER)
+     * @param pointer The pointer to the target phase
+     */
+    record DefaultLink(Lifecycle.Link.Kind kind, Lifecycle.Pointer pointer) implements Lifecycle.Link {
+        /**
+         * Compact constructor with null validation.
+         */
+        DefaultLink {
+            Objects.requireNonNull(kind, "kind cannot be null");
+            Objects.requireNonNull(pointer, "pointer cannot be null");
         }
 
         @Override
-        public String name() {
-            return name;
-        }
-
-        @Override
-        public List<Plugin> plugins() {
-            return plugins;
-        }
-
-        @Override
-        public Collection<Lifecycle.Link> links() {
-            return links;
-        }
-
-        @Override
-        public List<Lifecycle.Phase> phases() {
-            return phases;
-        }
-
-        @Override
-        public Stream<Lifecycle.Phase> allPhases() {
-            return Stream.concat(Stream.of(this), phases().stream().flatMap(Lifecycle.Phase::allPhases));
+        @Nonnull
+        public String toString() {
+            return kind.name().toLowerCase() + "(" + pointer + ")";
         }
     }
 
-    static class DefaultAlias implements Lifecycle.Alias {
-        private final String v3Phase;
-        private final String v4Phase;
-
-        DefaultAlias(String v3Phase, String v4Phase) {
-            this.v3Phase = v3Phase;
-            this.v4Phase = v4Phase;
+    /**
+     * Record implementation of PhasePointer.
+     *
+     * @param phase The name of the target phase
+     */
+    record DefaultPhasePointer(String phase) implements Lifecycle.PhasePointer {
+        /**
+         * Compact constructor with null validation.
+         */
+        DefaultPhasePointer {
+            Objects.requireNonNull(phase, "phase cannot be null");
         }
 
         @Override
-        public String v3Phase() {
-            return v3Phase;
+        @Nonnull
+        public String toString() {
+            return "phase(" + phase + ")";
+        }
+    }
+
+    /**
+     * Record implementation of DependenciesPointer.
+     *
+     * @param phase The name of the target phase
+     * @param scope The dependency scope
+     */
+    record DefaultDependenciesPointer(String phase, String scope) implements Lifecycle.DependenciesPointer {
+        /**
+         * Compact constructor with null validation.
+         */
+        DefaultDependenciesPointer {
+            Objects.requireNonNull(phase, "phase cannot be null");
+            Objects.requireNonNull(scope, "scope cannot be null");
         }
 
         @Override
-        public String v4Phase() {
-            return v4Phase;
+        @Nonnull
+        public String toString() {
+            return "dependencies(" + scope + ", " + phase + ")";
+        }
+    }
+
+    /**
+     * Record implementation of ChildrenPointer.
+     *
+     * @param phase The name of the target phase
+     */
+    record DefaultChildrenPointer(String phase) implements Lifecycle.ChildrenPointer {
+        /**
+         * Compact constructor with null validation.
+         */
+        DefaultChildrenPointer {
+            Objects.requireNonNull(phase, "phase cannot be null");
+        }
+
+        @Override
+        @Nonnull
+        public String toString() {
+            return "children(" + phase + ")";
+        }
+    }
+
+    /**
+     * Record implementation of Lifecycle.Phase.
+     *
+     * @param name The name of the phase
+     * @param plugins The list of plugins bound to this phase
+     * @param links The collection of links from this phase to other phases
+     * @param phases The list of sub-phases
+     */
+    record DefaultPhase(
+            String name, List<Plugin> plugins, Collection<Lifecycle.Link> links, List<Lifecycle.Phase> phases)
+            implements Lifecycle.Phase {
+
+        /**
+         * Canonical constructor with null validation and defensive copying.
+         *
+         * @param name The name of the phase
+         * @param plugins The list of plugins bound to this phase
+         * @param links The collection of links from this phase to other phases
+         * @param phases The list of sub-phases
+         */
+        DefaultPhase(
+                String name, List<Plugin> plugins, Collection<Lifecycle.Link> links, List<Lifecycle.Phase> phases) {
+            this.name = Objects.requireNonNull(name, "name cannot be null");
+            this.plugins = List.copyOf(Objects.requireNonNull(plugins, "plugins cannot be null"));
+            this.links = List.copyOf(Objects.requireNonNull(links, "links cannot be null"));
+            this.phases = List.copyOf(Objects.requireNonNull(phases, "phases cannot be null"));
+        }
+    }
+
+    /**
+     * Record implementation of Lifecycle.Alias.
+     *
+     * @param v3Phase The Maven 3 phase name
+     * @param v4Phase The Maven 4 phase name
+     */
+    record DefaultAlias(String v3Phase, String v4Phase) implements Lifecycle.Alias {
+        /**
+         * Compact constructor with null validation.
+         */
+        DefaultAlias {
+            Objects.requireNonNull(v3Phase, "v3Phase cannot be null");
+            Objects.requireNonNull(v4Phase, "v4Phase cannot be null");
         }
     }
 }
