@@ -19,12 +19,10 @@
 package org.apache.maven.lifecycle.internal.concurrent;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.apache.maven.api.Lifecycle;
+import org.apache.maven.api.annotations.Nonnull;
 import org.apache.maven.api.model.Plugin;
 import org.apache.maven.plugin.descriptor.PluginDescriptor;
 
@@ -40,22 +38,26 @@ class PluginLifecycle implements Lifecycle {
     }
 
     @Override
+    @Nonnull
     public String id() {
         return lifecycleOverlay.getId();
     }
 
     @Override
+    @Nonnull
     public Collection<Phase> phases() {
         return lifecycleOverlay.getPhases().stream()
-                .map(phase -> new Phase() {
+                .map(phase -> (Phase) new Phase() {
                     @Override
+                    @Nonnull
                     public String name() {
                         return phase.getId();
                     }
 
                     @Override
+                    @Nonnull
                     public List<Plugin> plugins() {
-                        return Collections.singletonList(Plugin.newBuilder()
+                        return List.of(Plugin.newBuilder()
                                 .groupId(pluginDescriptor.getGroupId())
                                 .artifactId(pluginDescriptor.getArtifactId())
                                 .version(pluginDescriptor.getVersion())
@@ -65,30 +67,28 @@ class PluginLifecycle implements Lifecycle {
                                                 .goals(exec.getGoals())
                                                 .configuration(exec.getConfiguration())
                                                 .build())
-                                        .collect(Collectors.toList()))
+                                        .toList())
                                 .build());
                     }
 
                     @Override
+                    @Nonnull
                     public Collection<Link> links() {
-                        return Collections.emptyList();
+                        return List.of();
                     }
 
                     @Override
+                    @Nonnull
                     public List<Phase> phases() {
-                        return Collections.emptyList();
-                    }
-
-                    @Override
-                    public Stream<Phase> allPhases() {
-                        return Stream.concat(Stream.of(this), phases().stream().flatMap(Phase::allPhases));
+                        return List.of();
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Nonnull
     public Collection<Alias> aliases() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
