@@ -31,7 +31,6 @@ import java.util.Collection;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.apache.maven.api.di.Inject;
 import org.apache.maven.api.di.Named;
@@ -41,8 +40,6 @@ import org.apache.maven.api.services.ChecksumAlgorithmServiceException;
 import org.eclipse.aether.spi.connector.checksum.ChecksumAlgorithmFactory;
 import org.eclipse.aether.spi.connector.checksum.ChecksumAlgorithmFactorySelector;
 
-import static org.apache.maven.impl.ImplUtils.nonNull;
-
 @Named
 @Singleton
 public class DefaultChecksumAlgorithmService implements ChecksumAlgorithmService {
@@ -50,20 +47,20 @@ public class DefaultChecksumAlgorithmService implements ChecksumAlgorithmService
 
     @Inject
     public DefaultChecksumAlgorithmService(ChecksumAlgorithmFactorySelector checksumAlgorithmFactorySelector) {
-        this.checksumAlgorithmFactorySelector =
-                nonNull(checksumAlgorithmFactorySelector, "checksumAlgorithmFactorySelector");
+        this.checksumAlgorithmFactorySelector = Objects.requireNonNull(
+                checksumAlgorithmFactorySelector, "checksumAlgorithmFactorySelector cannot be null");
     }
 
     @Override
     public Collection<String> getChecksumAlgorithmNames() {
         return checksumAlgorithmFactorySelector.getChecksumAlgorithmFactories().stream()
                 .map(ChecksumAlgorithmFactory::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public ChecksumAlgorithm select(String algorithmName) {
-        nonNull(algorithmName, "algorithmName");
+        Objects.requireNonNull(algorithmName, "algorithmName cannot be null");
         try {
             return new DefaultChecksumAlgorithm(checksumAlgorithmFactorySelector.select(algorithmName));
         } catch (IllegalArgumentException e) {
@@ -73,11 +70,11 @@ public class DefaultChecksumAlgorithmService implements ChecksumAlgorithmService
 
     @Override
     public Collection<ChecksumAlgorithm> select(Collection<String> algorithmNames) {
-        nonNull(algorithmNames, "algorithmNames");
+        Objects.requireNonNull(algorithmNames, "algorithmNames cannot be null");
         try {
             return checksumAlgorithmFactorySelector.selectList(new ArrayList<>(algorithmNames)).stream()
-                    .map(DefaultChecksumAlgorithm::new)
-                    .collect(Collectors.toList());
+                    .map(a -> (ChecksumAlgorithm) new DefaultChecksumAlgorithm(a))
+                    .toList();
         } catch (IllegalArgumentException e) {
             throw new ChecksumAlgorithmServiceException("unsupported algorithm", e);
         }
@@ -85,8 +82,8 @@ public class DefaultChecksumAlgorithmService implements ChecksumAlgorithmService
 
     @Override
     public Map<ChecksumAlgorithm, String> calculate(byte[] data, Collection<ChecksumAlgorithm> algorithms) {
-        nonNull(data, "data");
-        nonNull(algorithms, "algorithms");
+        Objects.requireNonNull(data, "data cannot be null");
+        Objects.requireNonNull(algorithms, "algorithms cannot be null");
         try {
             return calculate(new ByteArrayInputStream(data), algorithms);
         } catch (IOException e) {
@@ -96,8 +93,8 @@ public class DefaultChecksumAlgorithmService implements ChecksumAlgorithmService
 
     @Override
     public Map<ChecksumAlgorithm, String> calculate(ByteBuffer data, Collection<ChecksumAlgorithm> algorithms) {
-        nonNull(data, "data");
-        nonNull(algorithms, "algorithms");
+        Objects.requireNonNull(data, "data cannot be null");
+        Objects.requireNonNull(algorithms, "algorithms cannot be null");
         LinkedHashMap<ChecksumAlgorithm, ChecksumCalculator> algMap = new LinkedHashMap<>();
         algorithms.forEach(f -> algMap.put(f, f.getCalculator()));
         data.mark();
@@ -113,8 +110,8 @@ public class DefaultChecksumAlgorithmService implements ChecksumAlgorithmService
     @Override
     public Map<ChecksumAlgorithm, String> calculate(Path file, Collection<ChecksumAlgorithm> algorithms)
             throws IOException {
-        nonNull(file, "file");
-        nonNull(algorithms, "algorithms");
+        Objects.requireNonNull(file, "file cannot be null");
+        Objects.requireNonNull(algorithms, "algorithms cannot be null");
         try (InputStream inputStream = new BufferedInputStream(Files.newInputStream(file))) {
             return calculate(inputStream, algorithms);
         }
@@ -123,8 +120,8 @@ public class DefaultChecksumAlgorithmService implements ChecksumAlgorithmService
     @Override
     public Map<ChecksumAlgorithm, String> calculate(InputStream stream, Collection<ChecksumAlgorithm> algorithms)
             throws IOException {
-        nonNull(stream, "stream");
-        nonNull(algorithms, "algorithms");
+        Objects.requireNonNull(stream, "stream cannot be null");
+        Objects.requireNonNull(algorithms, "algorithms cannot be null");
         LinkedHashMap<ChecksumAlgorithm, ChecksumCalculator> algMap = new LinkedHashMap<>();
         algorithms.forEach(f -> algMap.put(f, f.getCalculator()));
         final byte[] buffer = new byte[1024 * 32];
