@@ -22,7 +22,6 @@ import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Test;
@@ -50,7 +49,7 @@ class MavenITmng7740ConsumerBuildShouldCleanUpOldFilesTest extends AbstractMaven
             final List<Path> consumerFiles = stream.filter(
                             path -> path.getFileName().toString().contains("consumer")
                                     && path.getFileName().toString().contains("pom"))
-                    .collect(Collectors.toList());
+                    .toList();
             assertTrue(consumerFiles.size() == 0, "Expected no consumer pom file.");
         }
     }
